# Copwl

./: .gitignore  对话总结-技术决策记录.md  简历-项目经历.md  难点分析.md
.claude/: settings.local.json
.claude/agents/: 产品.md  开发.md  测试.md
音频接收转换/: run_demo.py
音频识别/: .gitignore  README.md  pyproject.toml  requirements.txt  run_fusion_demo.py  run_inference_demo.py  setup.py  w2v-SELD音频事件检测模块开发文档.md  交付文档.md
音频识别/config/: default.yaml  logging.yaml
音频识别/scripts/: download_weights.py  finetune_on_modelscope.sh  prepare_dataset.py  setup.ps1  setup.sh
音频识别/src/emotion/: __init__.py  config.py  engine.py  models.py
音频识别/src/seld/: __init__.py  api.py  audio.py  config.py  engine.py  exceptions.py  fusion.py  logging_utils.py  models.py  perception.py  streaming.py
音频识别/tests/: conftest.py  test_api.py  test_audio.py  test_config.py  test_emotion.py  test_engine.py  test_exceptions.py  test_streaming.py
音频识别/tests/fixtures/: mock_model.py  synthetic.py
